; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-utils.c_tar_write_long_link_header.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-utils.c_tar_write_long_link_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAR_PACK_ERR_WRITE_HEADER = common dso_local global i32 0, align 4
@TAR_PACK_ERR_GZWRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32, i8*)* @tar_write_long_link_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tar_write_long_link_header(i32 %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = call i64 @tar_write_header(i32 %12, i8* %13)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* @TAR_PACK_ERR_WRITE_HEADER, align 4
  store i32 %17, i32* %5, align 4
  br label %53

18:                                               ; preds = %4
  store i32 0, i32* %10, align 4
  br label %19

19:                                               ; preds = %49, %18
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %8, align 4
  %22 = add nsw i32 %21, 1
  %23 = icmp slt i32 %20, %22
  br i1 %23, label %24, label %52

24:                                               ; preds = %19
  %25 = load i32, i32* %8, align 4
  %26 = add nsw i32 %25, 1
  %27 = load i32, i32* %10, align 4
  %28 = sub nsw i32 %26, %27
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %11, align 4
  %30 = icmp sgt i32 %29, 512
  br i1 %30, label %31, label %32

31:                                               ; preds = %24
  store i32 512, i32* %11, align 4
  br label %32

32:                                               ; preds = %31, %24
  %33 = load i8*, i8** %7, align 8
  %34 = call i32 @memset(i8* %33, i32 0, i32 512)
  %35 = load i8*, i8** %7, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = load i32, i32* %10, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i8, i8* %36, i64 %38
  %40 = load i32, i32* %11, align 4
  %41 = call i32 @memcpy(i8* %35, i8* %39, i32 %40)
  %42 = load i32, i32* %6, align 4
  %43 = load i8*, i8** %7, align 8
  %44 = call i32 @gzwrite(i32 %42, i8* %43, i32 512)
  %45 = icmp ne i32 %44, 512
  br i1 %45, label %46, label %48

46:                                               ; preds = %32
  %47 = load i32, i32* @TAR_PACK_ERR_GZWRITE, align 4
  store i32 %47, i32* %5, align 4
  br label %53

48:                                               ; preds = %32
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %10, align 4
  %51 = add nsw i32 %50, 512
  store i32 %51, i32* %10, align 4
  br label %19

52:                                               ; preds = %19
  store i32 0, i32* %5, align 4
  br label %53

53:                                               ; preds = %52, %46, %16
  %54 = load i32, i32* %5, align 4
  ret i32 %54
}

declare dso_local i64 @tar_write_header(i32, i8*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @gzwrite(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
